--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -625,7 +625,7 @@ form {
 #main-content h1:before {
   padding-right: 0.3em;
   margin-left: -0.9em;
-  color: #9ddcff;
+  color: #012456;
   content: "/";
 }
 
@@ -641,7 +641,7 @@ form {
   padding-right: 0.3em;
   margin-left: -1.5em;
   content: "//";
-  color: #9ddcff;
+  color: #012456;
 }
 
 #main-content h3 {
@@ -658,7 +658,7 @@ form {
   padding-right: 0.3em;
   margin-left: -2em;
   content: "///";
-  color: #9ddcff;
+  color: #012456;
 }
 
 #main-content h4 {
@@ -688,7 +688,7 @@ h5:before {
   padding-right: 0.3em;
   margin-left: -3.2em;
   content: "/////";
-  color: #9ddcff;
+  color: #012456;
 }
 
 #main-content h6 {
@@ -702,7 +702,7 @@ h6:before {
   padding-right: 0.3em;
   margin-left: -3.7em;
   content: "//////";
-  color: #9ddcff;
+  color: #012456;
 }
 
 p {
