--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -549,12 +549,12 @@ code, pre {
   margin-bottom: 30px;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
-  color: #222;
+  color: #FFF;
 }
 
 code {
   padding: 0 3px;
-  background-color: #f2f8fc;
+  background-color: #012456;
   border: solid 1px #dbe7f3;
 }
 
@@ -562,13 +562,13 @@ pre {
   padding: 20px;
   overflow: auto;
   text-shadow: none;
-  background: #fff;
+  background: #012456;
   border: solid 1px #f2f2f2;
 }
 pre code {
   padding: 0;
-  color: #2879d0;
-  background-color: #fff;
+  color: #fff;
+  background-color: #012456;
   border: none;
 }
 
